# python-template

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
app/: config.py  main.py
app/db/: database.py  schema.py
app/functions/: user.py
app/lib/: auth.py  errors.py  oauth.py  storage.py
app/middleware/: auth.py  logging.py  security.py
app/pages/: index.py  login.py  logout.py
app/templates/: base.html  index.html  login.html  logout.html
scripts/: setup.py
static/css/: main.css
