[project]
name = "python-app"
version = "0.1.0"
description = "Local Python web application template"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "authlib>=1.3.2",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.2",
    "aiofiles>=24.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.389",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
